fix: fix custom-select active style and fix tree icon and text align

--- a/src/tree/styles/tree.scss
+++ b/src/tree/styles/tree.scss
@@ -57,6 +57,7 @@
 
                 .thy-tree-node-title {
                     flex: 1;
+                    line-height: 100%;
 
                     &.truncate {
                         @include text-truncate();
